# Core

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: bitcoin_config.h  common.init.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
contrib/: README.md  install_db4.sh
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-liaron.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  liaron-cli.1  liaron-qt.1  liaron-tx.1  liaron-wallet.1  liarond.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  banman.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  coins.h  compressor.h  core_read.cpp  flatfile.h  init.cpp  init.h  logging.cpp  logging.h  miner.cpp  miner.h  net.cpp  net.h  net_permissions.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  outputtype.cpp  pow.cpp  psbt.cpp  (+15 more)
test/: README.md  get_previous_releases.py
(+229 files in other folders)
